packages/client/css/smart-connector.css
.smart-connector {
    position: absolute;
    z-index: 1;
}

/* combined container */

#smart-connector-container {
    position: absolute;
    visibility: hidden;
}

/* expand button */

#smart-connector-expand-button {
    height: 32px;
    width: 32px;
    border-radius: 50%;
    border: 1px solid black;
    z-index: 9999;
    display: flex; /* or inline-flex */
    align-items: center; 
    justify-content: center;
    position: absolute;
    background: #cccccc;
    visibility: hidden;
}

/* search bar */

.smart-connector-search {
    background: #dfdfdf;
    color: black;
    border: #bddaef;
    padding-left: 3px;
    width: 100%;
    box-sizing: border-box;
}

.smart-connector-submenu-search-container {
    max-height: 0;
    overflow: hidden;
}

.smart-connector-search-container {
    max-height: 50px;
}

/* header */

.header-title {
    display: flex;
    align-items: center;
    padding-right: 8px;
}

.smart-connector-group-header {
    justify-content: space-between;
}

/* seperated containers */

.smart-connector-group-container {
    border-left: 1px solid black;
    border-right: 1px solid black;
    background-color:rgba(1, 1, 1, 0.6);
    max-width: 200px;
    /* display: flex; */
}

.smart-connector-group-container:hover, .smart-connector-group-container:focus-within {
    z-index: 10000;
}

.smart-connector-group-container div:first-child {
    border-top: 0;
}

/* container items */

.smart-connector-group {
    overflow-y: scroll;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

/* scrollbar */
.smart-connector-group::-webkit-scrollbar {
    display: none;
}

.collapsable-group {
    max-height: 0;
    /* transition: max-height 0.2s ease-out; */
}

/* single item */

.smart-connector-button {
    border-top: 1px solid black;
    margin: 0 4px;
    padding: 8px 0;
    z-index: 9998;
    pointer-events: auto;
    cursor: pointer;
}

